modules/gdscript/tests/scripts/parser/errors/export_godot3_syntax_with_args.gd
export(int, "a", "b", "c") var test = 3


func test():
	pass
